azure_jumpstart_arcbox_levelup/ARM/mgmt/mgmtArtifacts.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "ArcBox-VNet",
      "metadata": {
        "description": "Name of the VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "ArcBox-Subnet",
      "metadata": {
        "description": "Name of the subnet in the virtual network"
      }
    },
    "workspaceName": {
      "type": "string",
      "metadata": {
        "description": "Name for your log analytics workspace"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure Region to deploy the Log Analytics Workspace"
      }
    },
    "sku": {
      "type": "string",
      "defaultValue": "pergb2018",
      "metadata": {
        "description": "SKU, leave default pergb2018"
      }
    },
    "deployBastion": {
      "type": "bool",
      "metadata": {
        "description": "Choice to deploy Azure Bastion"
      },
      "defaultValue": false
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "ArcBox-NSG",
      "metadata": {
        "description": "Name of the Network Security Group"
      }
    },
    "bastionNetworkSecurityGroupName": {
      "type": "string",
      "defaultValue": "ArcBox-Bastion-NSG",
      "metadata": {
        "description": "Name of the Network Security Group"
      }
    }
  },
  "variables": {
    "Security": {
      "name": "[format('Security({0})', parameters('workspaceName'))]",
      "galleryName": "Security"
    },
    "addressPrefix": "10.16.0.0/16",
    "subnetAddressPrefix": "10.16.1.0/24",
    "bastionSubnetName": "AzureBastionSubnet",
    "bastionSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), variables('bastionSubnetName'))]",
    "bastionName": "ArcBox-Bastion",
    "bastionSubnetIpPrefix": "10.16.3.64/26",
    "bastionPublicIpAddressName": "[concat(variables('bastionName'), '-PIP' )]",
    "primarySubnet": [
      {
        "name": "[parameters('subnetName')]",
        "properties": {
          "addressPrefix": "[variables('subnetAddressPrefix')]",
          "privateEndpointNetworkPolicies": "Enabled",
          "privateLinkServiceNetworkPolicies": "Enabled",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
          }
        }
      }
    ],
    "bastionSubnet": [
      {
        "name": "AzureBastionSubnet",
        "properties": {
          "addressPrefix": "[variables('bastionSubnetIpPrefix')]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionNetworkSecurityGroupName'))]"
          }
        }
      }
    ]
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2022-01-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('bastionNetworkSecurityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": "[
          union(variables('primarySubnet'), variables('bastionSubnet'))
        ]"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-01-01",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow_k8s_80",
            "properties": {
              "priority": 1003,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "allow_k8s_8080",
            "properties": {
              "priority": 1004,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "8080"
            }
          },
          {
            "name": "allow_k8s_443",
            "properties": {
              "priority": 1005,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "allow_k8s_kubelet",
            "properties": {
              "priority": 1006,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "10250"
            }
          },
          {
            "name": "allow_traefik_lb_external",
            "properties": {
              "priority": 1007,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "32323"
            }
          },
          {
            "name": "allow_SQLMI_traffic",
            "properties": {
              "priority": 1008,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "11433 "
            }
          },
          {
            "name": "allow_Postgresql_traffic",
            "properties": {
              "priority": 1009,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "15432"
            }
          },
          {
            "name": "allow_SQLMI_mirroring_traffic",
            "properties": {
              "priority": 1012,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "5022 "
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-01-01",
      "name": "[parameters('bastionNetworkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "bastion_allow_https_inbound",
            "properties": {
              "priority": 1010,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_gateway_manager_inbound",
            "properties": {
              "priority": 1011,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "GatewayManager",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_load_balancer_inbound",
            "properties": {
              "priority": 1012,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_host_comms",
            "properties": {
              "priority": 1013,
              "protocol": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [
                "8080",
                "5701"
              ]
            }
          },
          {
            "name": "bastion_allow_ssh_rdp_outbound",
            "properties": {
              "priority": 1014,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [ "22", "3389" ]
            }
          },
          {
            "name": "bastion_allow_azure_cloud_outbound",
            "properties": {
              "priority": 1015,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "AzureCloud",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bastion_allow_bastion_comms",
            "properties": {
              "priority": 1016,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRanges": [ "8080", "5701" ]
            }
          },
          {
            "name": "bastion_allow_get_session_info",
            "properties": {
              "priority": 1017,
              "protocol": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "Internet",
              "destinationPortRanges": [ "80", "443" ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.OperationalInsights/workspaces",
      "apiVersion": "2021-12-01-preview",
      "name": "[parameters('workspaceName')]",
      "location": "[parameters('location')]",
      "properties": {
        "sku": {
          "name": "[parameters('sku')]"
        }
      }
    },
    {
      "type": "Microsoft.OperationsManagement/solutions",
      "apiVersion": "2015-11-01-preview",
      "name": "[variables('Security').name]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.OperationalInsights/workspaces', parameters('workspaceName'))]"
      ],
      "plan": {
        "name": "[variables('Security').name]",
        "promotionCode": "",
        "product": "[format('OMSGallery/{0}', variables('Security').galleryName)]",
        "publisher": "Microsoft"
      },
      "properties": {
        "workspaceResourceId": "[resourceId('Microsoft.OperationalInsights/workspaces', parameters('workspaceName'))]"
      }
    },
    {
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2022-01-01",
      "name": "[variables('bastionPublicIpAddressName')]",
      "condition": "[parameters('deployBastion')]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIpAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "idleTimeoutInMinutes": 4
      },
      "sku": {
        "name": "Standard"
      }
    },
    {
      "type": "Microsoft.Network/bastionHosts",
      "condition": "[parameters('deployBastion')]",
      "name": "[variables('bastionName')]",
      "location": "[parameters('location')]",
      "apiVersion": "2022-01-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('bastionPublicIpAddressName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "IpConf",
            "properties": {
              "subnet": {
                "id": "[variables('bastionSubnetRef')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('bastionPublicIpAddressName'))]"
              }
            }
          }
        ]
      }
    }
  ]
}
